# Max_Agent

./: .gitignore  LICENSE  config.py  file_tracker.py  logger_setup.py  main.py  pdf_generator.py  pdf_processor.py  pdf_summariser_app.py  processed_pdfs.txt  pyproject.toml  readme.md  readme.txt  requirements.txt  summariser.py
.github/workflows/: python-app.yml
cleaned_texts/: Share your app - Streamlit Docs_cleaned.txt
dejavu-sans/: DejaVuSans-Bold.pkl  DejaVuSans-BoldOblique.pkl  DejaVuSans-Oblique.pkl  DejaVuSans.pkl
src/max_agent/: __init__.py  cli.py  config.py  config.yaml  file_tracker.py  logger_setup.py  main.py  pdf_generator.py  pdf_processor.py  pdf_summariser_app.py  summariser.py
tests/: test_pdf_processor.py
