[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "max-agent"
version = "0.1.0"
description = "A Python package for PDF summarization and context embedding for chat agents."
authors = [
    { name = "François REEVES", email = "francois@reevesnco.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
homepage = "https://github.com/Tennisee-data/Max_Agent"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic"
]

[project.dependencies]
fpdf = "==1.7.2"
pdfplumber = "==0.11.4"
PyYAML = "==6.0.2"
torch = "*"
transformers = "==4.47.0"
wordsegment = ">=1.3.1"

# Optional dependencies
[project.optional-dependencies]
performance = ["intel_extension_for_pytorch==2.5.0"]

[tool.setuptools]
package-data = {
    "max_agent": ["config.yaml"],
}

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
